force-app/main/default/objects/Charket__WeChatAgent__c/Charket__WeChatAgent__c.object-meta.xml
<CustomObject>
    <label>WeChat Agent</label>
    <nameField>
        <label>Agent Nickname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>