force-app/main/default/objects/Charket__WeChatAgent__c/fields/BackupAgent__c.field-meta.xml
<CustomField>
    <fullName>BackupAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backup Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WeChatAgents</relationshipName>
    <type>Lookup</type>
</CustomField>