force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>Charket__CurrentStatus__c</fullName>
    <formula>IF(AND(Charket__IsAway__c, NOT(Charket__WeChatAgentStatus__r.Charket__IsNonoverridableBySystem__c)), $Setup.Charket__CharketSettings__c.Charket__AgentDefaultStatus__c, Charket__WeChatAgentStatus__r.Name)</formula>
    <label>Current Status</label>
    <type>Text</type>
</CustomField>