force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__CurrentStatusPriority__c.field-meta.xml
<CustomField>
    <fullName>Charket__CurrentStatusPriority__c</fullName>
    <formula>IF(AND(Charket__IsAway__c, NOT(Charket__WeChatAgentStatus__r.Charket__IsNonoverridableBySystem__c)), $Setup.Charket__CharketSettings__c.Charket__AgentDefaultStatusPriority__c, Charket__WeChatAgentStatus__r.Charket__Priority__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>