force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__DNDStartTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__DNDStartTime__c</fullName>
    <label>DND Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>