force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__IsAcceptsChats__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsAcceptsChats__c</fullName>
    <formula>IF(OR(NOT(Charket__IsActive__c), NOT(Charket__User__r.IsActive)), false, IF(AND(Charket__IsAway__c, NOT(Charket__WeChatAgentStatus__r.Charket__IsNonoverridableBySystem__c)), $Setup.Charket__CharketSettings__c.Charket__IsAgentDefaultStatusAcceptsChats__c, Charket__WeChatAgentStatus__r.Charket__IsAcceptsChats__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepts Chats</label>
    <type>Checkbox</type>
</CustomField>