force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__IsActive__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>