force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__IsAway__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsAway__c</fullName>
    <formula>OR(!Charket__IsActive__c, AND(!Charket__IsMobileAppEnabled__c, OR((now() - Charket__LastDesktopActiveTime__c)*24*60 &gt;= 1, ISBLANK(Charket__LastDesktopActiveTime__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Away</label>
    <type>Checkbox</type>
</CustomField>