force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__IsDesktopNotificationsEnabled__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsDesktopNotificationsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Desktop Notifications Enabled</label>
    <type>Checkbox</type>
</CustomField>