force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__IsDoNotDisturbEnabled__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsDoNotDisturbEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Disturb Enabled</label>
    <type>Checkbox</type>
</CustomField>