force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__IsEmailNotificationsEnabled__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsEmailNotificationsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email Notifications Enabled</label>
    <type>Checkbox</type>
</CustomField>