force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__IsMobileNotificationsEnabled__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsMobileNotificationsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mobile Notifications Enabled</label>
    <type>Checkbox</type>
</CustomField>