force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__LastChatCompletedTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__LastChatCompletedTime__c</fullName>
    <label>Last Chat Completed Time</label>
    <type>DateTime</type>
</CustomField>