force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__LastDesktopActiveTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__LastDesktopActiveTime__c</fullName>
    <label>Last Desktop Active Time</label>
    <type>DateTime</type>
</CustomField>