force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__Status__c.field-meta.xml
<CustomField>
    <fullName>Charket__Status__c</fullName>
    <label>Manual Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
                <default>true</default>
                <label>Offline</label>
            </value>
            <value>
                <fullName>Don&apos;t Accept Chats</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>