force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__User__c.field-meta.xml
<CustomField>
    <fullName>Charket__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WeChatAgents</relationshipName>
    <type>Lookup</type>
</CustomField>