force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__WaitingCount__c.field-meta.xml
<CustomField>
    <fullName>Charket__WaitingCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Waiting Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>