force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__WeChatAccount__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WeChat Account</label>
    <referenceTo>Charket__WeChatAccount__c</referenceTo>
    <relationshipLabel>WeChat Agents</relationshipLabel>
    <relationshipName>WeChatAgents</relationshipName>
    <type>Lookup</type>
</CustomField>