force-app/main/default/objects/Charket__WeChatAgent__c/fields/Charket__WeChatAgentStatus__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatAgentStatus__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WeChat Agent Status</label>
    <referenceTo>Charket__WeChatAgentStatus__c</referenceTo>
    <relationshipLabel>WeChat Agents</relationshipLabel>
    <relationshipName>WeChatAgents</relationshipName>
    <type>Lookup</type>
</CustomField>