force-app/main/default/objects/Charket__WeChatAgent__c/fields/UsedFor__c.field-meta.xml
<CustomField>
    <fullName>UsedFor__c</fullName>
    <formula>Text(Charket__WeChatAccount__r.UsedFor__c)</formula>
    <label>Used For</label>
    <type>Text</type>
</CustomField>