force-app/main/default/objects/Charket__WeChatAgent__c/listViews/All_Customer_Care_Agents.listView-meta.xml
<ListView>
    <fullName>All_Customer_Care_Agents</fullName>
    <columns>NAME</columns>
    <columns>Charket__IsActive__c</columns>
    <columns>Charket__IsAcceptsChats__c</columns>
    <columns>Charket__CurrentStatus__c</columns>
    <columns>BackupAgent__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UsedFor__c</field>
        <operation>equals</operation>
        <value>Customer Care</value>
    </filters>
    <label>All Customer Care Agents</label>
</ListView>