force-app/main/default/objects/Charket__WeChatAgent__c/listViews/Charket__All.listView-meta.xml
<ListView>
    <fullName>Charket__All</fullName>
    <columns>NAME</columns>
    <columns>Charket__ChatCount__c</columns>
    <columns>Charket__Status__c</columns>
    <columns>Charket__User__c</columns>
    <columns>Charket__WeChatAccount__c</columns>
    <columns>Charket__IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>